Udemy-20240102T173430Z-001/Udemy/DK8sDockerMicroservices2023/phpmyadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  #kubectl get service phpmyadmin-service
  #minikube service phpmyadmin-service --url
  labels:
    app: shopapp
    tier: backend
spec:
  ports:
    - port: 80
  selector:
    app: shopapp
    tier: backend
  type: LoadBalancer  
      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: shopapp
    tier: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopapp
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: shopapp
        tier: backend
    spec:
      containers:
      - image: docker.io/phpmyadmin/phpmyadmin
        name: phpmyadmin
        ports:
        - containerPort: 80 #expose
          name: phpmyadmin
