Udemy-20240102T173430Z-001/Udemy/DK8sDockerMicroservices2023/dashboard-ingress.yaml
#kubectl get ns
#kubectl get all -n ingress-nginx 

#kubectl apply -f dashboard-ingress.yaml
#kubectl get ingress -n ingress-nginx --watch
#kubectl delete ingress dashboard-ingress -n ingress-nginx 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: ingress-nginx
spec:  
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-controller
            port:              
              number: 80
